Better color palette

--- a/tailwind/custom/components/components.css
+++ b/tailwind/custom/components/components.css
@@ -9,7 +9,7 @@
  */
 
 .header {
-	@apply sticky top-0 z-30 w-full border-b border-ultra-light-grey bg-white text-primary;
+	@apply sticky top-0 z-30 w-full border-b border-light-grey bg-white text-purple;
 	@apply px-4 py-2;
 }
 
@@ -39,14 +39,14 @@ nav.navbar-menu a {
 
 nav.navbar-menu ul ul li a:focus,
 nav.navbar-menu ul ul li a:active {
-    @apply text-accent;
+    @apply text-yellow;
 }
 nav.navbar-menu a:hover,
 nav.navbar-menu a:focus,
 nav.navbar-menu a:active,
 nav.navbar-menu a:focus:hover,
 nav.navbar-menu a:active:hover {
-    @apply text-accent;
+    @apply text-yellow;
 }
 
 nav.navbar-menu ul ul {
@@ -66,14 +66,14 @@ nav.navbar-menu ul li:active > div.wpml-ls > ul {
 nav.navbar-menu ul li.menu-item-has-children > a::after,
 nav.navbar-menu#langs-navigation > ul > li > a::after {
 	content: "";
-	@apply h-4 w-4 bg-primary transform transition-transform duration-200;
+	@apply h-4 w-4 bg-purple transform transition-transform duration-200;
 	clip-path: path("M5.293 7.293a1 1 0 0 1 1.414 0L10 10.586l3.293-3.293a1 1 0 1 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 0-1.414z");
 	/* background-image: url("data:image/svg+xml,%3Csvg fill='currentColor' viewBox='0 0 20 20'%3E%3Cpath fill-rule='evenodd' d='M5.293 7.293a1 1 0 0 1 1.414 0L10 10.586l3.293-3.293a1 1 0 1 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 0-1.414z' clip-rule='evenodd'/%3E%3C/svg%3E"); */
 }
 
 nav.navbar-menu#langs-navigation > ul > li > a:focus::after,
 nav.navbar-menu#langs-navigation > ul > li > a:active::after {
-    @apply rotate-180 bg-accent;
+    @apply rotate-180 bg-yellow;
 }
 
 nav.navbar-menu a:focus + ul,
@@ -87,7 +87,7 @@ nav.navbar-menu a:active + div.wpml-ls ul {
 	@apply relative inline-block overflow-hidden;
     @apply py-2 pr-14 rtl:pr-0 rtl:pl-14;
     @apply font-medium uppercase;
-    @apply text-primary;
+    @apply text-purple;
 }
 
 .hexa-cta::before {
@@ -183,7 +183,7 @@ $(prose-selector) {
  *
  */
 .entry-meta::before {
-	@apply content-['⬢'] text-accent;
+	@apply content-['⬢'] text-yellow;
 }
 
 /**
