--- a/tailwind/custom/file-header.css
+++ b/tailwind/custom/file-header.css
@@ -1,11 +1,12 @@
 /*!
 Theme Name: Hexagone 2022
-Theme URI: https://underscoretw.com/
+Theme URI: https://github.com/ecole-hexagone/ecole-hexagone-com-theme-2022/
 Author: École Hexagone
 Author URI: https://www.ecole-hexagone.com/
+Update URI: https://github.com/ecole-hexagone/ecole-hexagone-com-theme-2022/
 Description: A custom theme based on _tw
-Version: 1.0.0
-Tested up to: 6.0
+Version: 1.1
+Tested up to: 6.1
 Requires PHP: 7.4
 License: GNU General Public License v2 or later
 License URI: LICENSE
