--- a/tailwind/custom/utilities.css
+++ b/tailwind/custom/utilities.css
@@ -6,3 +6,11 @@
  *
  * https://tailwindcss.com/docs/plugins#adding-utilities
  */
+
+:where(.wp-block-group.has-background) {
+    @apply p-0;
+}
+
+.wp-block-group.is-style-hexagone-padded-group {
+    @apply p-4 md:p-8;
+}
